# hydra-badges

./: .hlint.yaml  CHANGELOG.md  LICENSE.md  Makefile  README.md  default.nix  hydra-badges.cabal
executables/hydra-badges/: Main.hs
nix/: declarative.nix  spec.json
nix/haskell/: hydra-badges.nix
