--------------------------------------------------------------------------------

name:                     hydra-badges
version:                  0.1.0
stability:                Experimental
build-type:               Simple
cabal-version:            >= 1.10
category:                 System
copyright:                Copyright 2017 Remy Goldschmidt
author:                   Remy Goldschmidt
maintainer:               taktoa@gmail.com
license:                  MIT
license-file:             LICENSE.md
homepage:                 https://github.com/taktoa/hydra-badges
bug-reports:              https://github.com/taktoa/hydra-badges/issues
synopsis:                 A server for Hydra jobset status badges.
description:              FIXME: doc
extra-source-files:       README.md
                        , CHANGELOG.md
tested-with:              GHC == 8.0.2

--------------------------------------------------------------------------------

source-repository head
    type:                 git
    branch:               master
    location:             https://github.com/taktoa/hydra-badges.git

source-repository this
    type:                 git
    tag:                  release-0.1.0
    location:             https://github.com/taktoa/hydra-badges.git

--------------------------------------------------------------------------------

library
    hs-source-dirs:       library
    build-depends:        base                        >= 4.8   && < 5.0
                        , flow
                        , text
                        , bytestring
                        , containers
                        , wreq
                        , scotty
                        , aeson
                        , lens
                        , lens-aeson
                        , svg-tree
                        , xml
                        , barrier
                        , JuicyPixels
                        , Rasterific
                        , rasterific-svg
                        -- , aeson                       >= 1.0   && < 1.3
                        -- , bytestring                  >= 0.10  && < 0.11
                        -- , containers                  >= 0.5   && < 0.6
                        -- , deepseq                     >= 1.4   && < 1.5
                        -- , flow                        >= 1.0   && < 1.1
                        -- , hashable                    >= 1.2   && < 1.3
                        -- , intern                      >= 0.9   && < 0.10
                        -- , megaparsec                  >= 5.2   && < 5.3
                        -- , mtl                         >= 2.2   && < 2.3
                        -- , lens                        >= 4.15  && < 4.16
                        -- , QuickCheck                  >= 2.9   && < 2.10
                        -- , semigroups                  >= 0.18  && < 0.19
                        -- , smallcheck                  >= 1.1   && < 1.2
                        -- , system-filepath             >= 0.4   && < 0.5
                        -- , text                        >= 1.2   && < 1.3
                        -- , transformers                >= 0.4   && < 0.6
                        -- , unordered-containers        >= 0.2   && < 0.3
                        -- , versions                    >= 3.1.1 && < 3.2
    exposed-modules:      Utility.HydraBadges
    default-language:     Haskell2010
    other-extensions:     ExistentialQuantification
                        , OverloadedStrings
                        , PackageImports
                        , RankNTypes
                        , TemplateHaskell
                        , TypeApplications
    if impl(ghc >= 8.0)
       ghc-options:       -Wcompat -Weverything
                          -fno-warn-unsafe
                          -fno-warn-safe
                          -fno-warn-implicit-prelude
                          -fno-warn-unused-do-bind
                          -fno-warn-missed-specialisations
                          -fno-warn-all-missed-specialisations
                          -g
    else
       ghc-options:       -Wall -g

--------------------------------------------------------------------------------

executable hydra-badges
    hs-source-dirs:       executables/hydra-badges
    main-is:              Main.hs
    build-depends:        hydra-badges
                        , base                        >= 4.8   && < 5.0
    default-language:     Haskell2010
    other-extensions:     DataKinds
    if impl(ghc >= 8.0)
       ghc-options:       -Wcompat -Weverything
                          -fno-warn-unsafe
                          -fno-warn-safe
                          -fno-warn-implicit-prelude
                          -fno-warn-unused-do-bind
                          -fno-warn-missed-specialisations
                          -fno-warn-all-missed-specialisations
                          -g -threaded
    else
       ghc-options:       -Wall
                          -g -threaded

--------------------------------------------------------------------------------
